# vk_denoise_nrd

./: .gitignore  CMakeLists.txt  README.md
RealtimeDenoiser/: CMakeLists.txt  README.md
RealtimeDenoiser/shaders/: compositing.comp  get_hit.glsl  host_device.h  nrd.glsl  nrd.rchit  nrd.rgen  nrd.rmiss  pathtrace.rahit  pathtrace.rchit  pathtrace.rmiss  ray_common.glsl  taa.comp
RealtimeDenoiser/src/: NRDWrapper.cpp  NRDWrapper.hpp  Nrd_ui.h  RealtimeDenoiser.cpp  tinygltf_impl.cpp
media/: cornellBox.gltf
